[package]
name = "betterjeb"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krpc_mars = { path = "../krpc-mars" }
log = "0.4.14"
env_logger = "0.8.3"

[build-dependencies]
glob = "*"
krpc_mars_terraformer = { path = "../krpc-mars-terraformer" }

